# CIL

./: .gitignore  CMakeLists.txt  README.md
CIL/: CIL-config.h.in  CMakeLists.txt  alloc.cc  alloc.h  arch.h  auto_buffer.h  color.cc  color.h  defs.h  error.h  fast_math.h  file.cc  file.h  hardware.cc  hardware.h  numeric.h  parallel.cc  parallel.h  parallel_pthreads.cc  point.h  range.h  rect.h  saturate_cast.h  scalar.h  singleton.h  size.h  string.cc  string.h  tls.cc  tls.h  traits.h  util.h  xadd.h
CIL/io/: base.cc  base.h  bitstream.cc  bitstream.h  exif.cc  exif.h  io.cc  io.h  jpeg.cc  jpeg.h  options.h  png.cc  png.h
CIL/mat/: allocator.cc  allocator.h  buffer_pool.h  convert.cc  convert.h  copy.cc  io_array.cc  io_array.h  io_array_impl.h  iterator.cc  iterator.h  iterator_impl.h  mat.cc  mat.h  mat_impl.h  matx.h  shared.h  size.h  step.h  umat_data.cc  umat_data.h  vec.h
CIL/transform/: resize.cc  resize.h  rotate.cc  rotate.h
CIL/transform/resize/: area.h  cubic.h  interp.lut.h  invoker.h  lanczos.h  linear.h
